# generated/src/main/java/com/api/TalentTorokuKoshinBFFApi.java
@@ -5,8 +5,6 @@
  */
 package com.api;
 
-import java.util.List;
-
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -25,10 +23,10 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.annotation.Generated;
 import jakarta.validation.Valid;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-10-22T19:36:04.635850+09:00[Asia/Tokyo]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-11-04T23:34:19.826482+09:00[Asia/Tokyo]")
 @Validated
 @Tag(name = "talentTorokuKoshinBFF", description = "the talentTorokuKoshinBFF API")
-@RequestMapping("${openapi.bFF.base-path:}")
+@RequestMapping("api")
 public interface TalentTorokuKoshinBFFApi {
 
     /**
@@ -54,7 +52,7 @@ public interface TalentTorokuKoshinBFFApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    ResponseEntity<List<TalentTorokuKoshinBFF>> postTalentTorokuKoshinBFF(
+    ResponseEntity<TalentTorokuKoshinBFF> postTalentTorokuKoshinBFF(
         @Parameter(name = "MTalent", description = "タレント情報を登録または更新するBFF") @Valid @RequestBody(required = false) MTalent mtalent
     );
 
